# zero2prod

./: Cargo.toml  README.md  configuration.yml
.cargo/: audit.toml
.github/workflows/: general.yml
scripts/: db_setup.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
