[package]
name = "zero2prod"
version = "0.1.0"
authors = ["oscar bernardini <bernardini687@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.0"
serde = {version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.4.0"
default-features = false
features = ["chrono", "macros", "migrate", "postgres", "uuid", "runtime-tokio-native-tls"]

[dev-dependencies]
reqwest = "0.10.9"
tokio = "0.2.22"
